# kiznix

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.common  Makefile.config  Makefile.rules  README.md  bochsrc
boot/common/: elf.c  elf.cpp  elf.h  elf.hpp  memory.c  memory.cpp  memory.h  memory.hpp  module.cpp  module.hpp  module.mk
boot/efi/: Makefile  README.md  efi.c  efi.cpp  efi.hpp  efiboot.cpp  fatal.cpp  libc.c  memorymap.cpp  memorymap.hpp  module.mk  stdio.h  stdlib.h  string.h
boot/launcher/: launcher.cpp
boot/multiboot/: Makefile  multiboot.asm  multiboot.cpp  multiboot.ld
boot/startos/: Makefile  module.mk  startos.cpp  startos.ld
boot/trampoline/: Makefile  module.mk  trampoline.c  trampoline.cpp  trampoline.ld
cmake/: CMakeASM-NASMCompiler.cmake  CMakeASM-NASMInformation.cmake  CMakeDetermineASM-NASMCompiler.cmake  toolchain-x86-efi.cmake  toolchain-x86-kiznix.cmake  toolchain-x86.cmake  toolchain-x86_64-efi.cmake  toolchain-x86_64-kiznix.cmake  toolchain-x86_64.cmake
include/sys/: elf.h  types.h
iso/: CMakeLists.txt  grub.cfg
kernel/: Makefile
kernel/ia32/: kernel.ld
kernel/x86_64/: kernel.ld
libc/: module.mk
libc/include/: stdlib.h  string.h
libc/stdio/: printf.c
src/acpica/: CMakeLists.txt
src/acpica/source/include/platform/: acenv.h  ackiznix.h
src/boot/efi/: CMakeLists.txt  Makefile  efi.cpp  efi.hpp  libc.cpp  memorymap.hpp  module.mk
src/boot/multiboot/: CMakeLists.txt  Makefile  multiboot.asm  multiboot.cpp  multiboot.ld
src/include/: multiboot.inc
src/include/boot/: efi.h  multiboot.h  multiboot2.h
src/include/kernel/: console.h  defs.h  interrupt.h  kernel.h  mutex.h  pci.h  pmm.h  semaphore.h  spinlock.h  thread.h  timer.h  vmm.h
src/include/kernel/x86/: bios.h  interrupt.h  io.h  pic.h  vga.h
src/include/sys/: io.h
src/iso/: grub.cfg
src/kernel/: CMakeLists.txt  Makefile  acpi.c  console.c  kernel.c  kernel.cpp  mutex.c  semaphore.c  spinlock.c  thread.c
src/kernel/x86/: bios.c  boot.asm  boot_32.asm  boot_64.asm  boot_pae.asm  cpu.c  interrupt.c  interrupt_32.asm  interrupt_64.asm  linker_32.ld  linker_64.ld  pci.c  pic.c  pmm.c  thread_32.asm  thread_64.asm  timer.c  vmm.c
src/libc/: CMakeLists.txt  assert.c  module.mk  string.c  time.c
src/libc/include/: alloca.h  assert.h  errno.h  fcntl.h  inttypes.h  libc-internals.h  libc-symbols.h  malloc.h  math.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
src/libc/include/sys/: io.h  mman.h  types.h
src/libc/math/: modf.c
src/libc/posix/: mman.c
src/libc/stdio/: fcvtbuf.c  printf.c  putchar.c  puts.c
src/libc/stdlib/: abort.c  malloc.c
src/libc/string/: strlen.c
src/libx86emu/: CMakeLists.txt  api.c
